Stepped F-Curve Modifier permanently changes Motion Path #60340

Closed
opened 2019-01-09 10:21:31 +01:00 by Andrei Nadin · 7 comments

System Information
Operating system: macOS 10.14.2
Graphics card:
Radeon Pro 560 4096 MB
Intel HD Graphics 630 1536 MB

Blender Version
Broken: 2.80, 1b6b0fbd95, blender2.8, 2019-01-08, built locally, no local changes

Worked: (optional): 2.79, 66c3eb369d274, blender2.29, 2019-01-04, 00:09)

Load the attached file
On the Object tab, enable and calculate the motion path - notice a smooth path
In the F-Curve modifiers (with the Z Channel Selected) add a Stepped Modifier, verify it is working in the graph view and in the 3D view.

On the Object tab, updated the motion path - it will become stepped

Remove the Stepped F-Curve Modifier - notice the curve in the graph window is smooth and the motion is smooth in 3D view.

On the Object tab, updated the motion path - it will stay stepped
On the Object tab, remove and re-calculate the motion path - it will stay stepped

SteppedFCurveModifierAndMotionPath.mov

SteppedFCurveModifierMotionPath.blend

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

**System Information** Operating system: macOS 10.14.2 Graphics card: Radeon Pro 560 4096 MB Intel HD Graphics 630 1536 MB **Blender Version** Broken: 2.80, 1b6b0fbd957f, blender2.8, 2019-01-08, built locally, no local changes Worked: (optional): 2.79, 66c3eb369d274, blender2.29, 2019-01-04, 00:09) Load the attached file On the Object tab, enable and calculate the motion path - notice a smooth path In the F-Curve modifiers (with the Z Channel Selected) add a Stepped Modifier, verify it is working in the graph view and in the 3D view. On the Object tab, updated the motion path - it will become stepped Remove the Stepped F-Curve Modifier - notice the curve in the graph window is smooth and the motion is smooth in 3D view. On the Object tab, updated the motion path - it will stay stepped On the Object tab, remove and re-calculate the motion path - it will stay stepped [SteppedFCurveModifierAndMotionPath.mov](https://archive.blender.org/developer/F6226056/SteppedFCurveModifierAndMotionPath.mov) [SteppedFCurveModifierMotionPath.blend](https://archive.blender.org/developer/F6226054/SteppedFCurveModifierMotionPath.blend) **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible).
Author

Added subscriber: @AnadinX

Added subscriber: @AnadinX
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Looks like there is some update missing when a fcurve modifier is removed.

Looks like there is some update missing when a fcurve modifier is removed.
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

@Sergey, I think I need your help to solve this correctly.
I'd think that I just need to add DEG_id_tag_update in delete_fmodifier_cb. However, I don't seem to have access to the id that needs to be updated..

@Sergey, I think I need your help to solve this correctly. I'd think that I just need to add `DEG_id_tag_update` in `delete_fmodifier_cb`. However, I don't seem to have access to the id that needs to be updated..

This issue was referenced by 92a081ff83

This issue was referenced by 92a081ff83ba551dd061f233af6239e1dbfb1241

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60340
No description provided.