Fix T60340: Removing f-curve modifier doesn't update animation